customer swagger
