# src/routes/customer.js
@@ -15,7 +15,7 @@ router.put('/profile/:id', customerController.updateProfile); // update operatio
 router.post('/:customerId/location', customerController.createLocation); // create and add location to customer
 
 router.get(
-  '/:customerId/location',
+  '/:customerId/locations',
   customerController.getAllLcationsByCustomerId
 ); // get all locations of customer by id
 router.get(
@@ -35,17 +35,17 @@ router.delete(
 
 router.delete('/:id', customerController.deleteAccount); // delete account                          // customer can delete his account?
 
-const chefController = require('../controllers/chef');
+// const chefController = require('../controllers/chef');
 
-router.get('/rate', customerController); // rated dishes
-router.get('/rate/:id', customerController); // rated a single dish
+// router.get('/rate', customerController); // rated dishes
+// router.get('/rate/:id', customerController); // rated a single dish
 
-router.put('/orders', customerController); // update orders
+// router.put('/orders', customerController); // update orders
 
-router.delete('/deleteAccount', customerController); // delete account
-router.get('/chefs', chefController); // all chefs"
-router.get('/chefs/:username', chefController); // all chefs"
-router.get('/dishes/dishId', chefController); // dish by id
-router.get('/dishes/filter', chefController); // filter dishes
+// router.delete('/deleteAccount', customerController); // delete account
+// router.get('/chefs', chefController); // all chefs"
+// router.get('/chefs/:username', chefController); // all chefs"
+// router.get('/dishes/dishId', chefController); // dish by id
+// router.get('/dishes/filter', chefController); // filter dishes
 
 module.exports = router;
